# terminal-emulator

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
cmake/: CMakeLists.txt
scripts/: buildCmake.bat  buildCmake.sh
src/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  font.c  font.h  globals.h  input.c  input.h  mag-terminal  main.c  renderer.c  renderer.h  shaders.c  shaders.h  shell.c  shell.h  terminal_logic.c  terminal_logic.h  textHandler.c  textHandler.h  types.h
